Restore true appearance

--- a/src/web/teams/templates/teams/list.html
+++ b/src/web/teams/templates/teams/list.html
@@ -11,7 +11,7 @@
                 {{ forloop.counter }}.
                 <a href="{{ team.get_absolute_url }}"><strong>{{ team.name }}</strong></a>:
 
-                 <span class="glyphicon glyphicon-star text-danger" title="Captain" style="font-size: 10pt"></span>
+                 <span class="glyphicon glyphicon-star" title="Captain" style="color: darkred; font-size: 10pt"></span>
                  <a href="{% url 'users:profile' team.captain.id %}">{{ team.captain.username }}</a>
                 {% for member in team.members.all|slice:':10' %}
                     {% if member != team.captain %}
