--- a/src/web/static/css/common.css
+++ b/src/web/static/css/common.css
@@ -230,7 +230,7 @@ h1.page__header {
 /* Contest header */
 .contest-header {
     color: white;
-    background-color: #006D5C;
+    background-color: rgb(143, 218, 209);
     margin: -30px -30px 0;
     padding: 20px 20px 15px 15px;
 }
@@ -324,7 +324,7 @@ h1.page__header {
 }
 
 .category .category-info {
-    background-color: #006D5C;
+    background-color: #339999;
     color: white;
 }
 
