--- a/src/web/templates/_navbar.html
+++ b/src/web/templates/_navbar.html
@@ -1,4 +1,3 @@
-{% load staticfiles %}
 {% load i18n %}
 
 <nav class="navbar navbar-default">
@@ -10,9 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand hidden-sm" href="{% url 'home' %}">
-                <img src="{% static 'images/kaspersky.png' %}">
-            </a>
+            <a class="navbar-brand hidden-sm" href="{% url 'home' %}">DRAPO</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
