--- a/src/web/users/templates/_footer.html
+++ b/src/web/users/templates/_footer.html
@@ -11,7 +11,7 @@
                 {% trans 'Drapo is a CTF checksystem' %}
             </p>
             <p>
-                {% trans 'Developed and hosted by <a href="http://kaspersky.com">Kaspersky Lab</a>' %}
+                {% trans 'Developed by <a href="https://vk.com/andgein">andgein</a> and <a href="https://vk.com/werelaxe">werelaxe</a> ' %}
             </p>
         </div>
         <div class="col-md-4 col-xs-6">
